monitoring/jenkins-updated.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"2"},"creationTimestamp":"2025-05-02T17:57:09Z","generation":2,"name":"jenkins","namespace":"jenkins","resourceVersion":"75524","uid":"7b443927-4bb6-42eb-b054-41e3b35a11a3"},"spec":{"progressDeadlineSeconds":600,"replicas":1,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"jenkins"}},"strategy":{"rollingUpdate":{"maxSurge":"25%","maxUnavailable":"25%"},"type":"RollingUpdate [...]
  creationTimestamp: "2025-05-02T17:57:09Z"
  generation: 4
  name: jenkins
  namespace: jenkins
  resourceVersion: "77595"
  uid: 7b443927-4bb6-42eb-b054-41e3b35a11a3
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: jenkins
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-05-03T00:38:01+01:00"
      creationTimestamp: null
      labels:
        app: jenkins
    spec:
      containers:
      - env:
        - name: JAVA_OPTS
          value: -Xmx1g -Dhudson.slaves.NodeProvisioner.MARGIN=50 -Dhudson.slaves.NodeProvisioner.MARGIN0=0.85
        image: jenkins/jenkins:2.508-jdk21
        imagePullPolicy: IfNotPresent
        name: jenkins
        ports:
        - containerPort: 8080
          name: ui
          protocol: TCP
        - containerPort: 50000
          name: slave
          protocol: TCP
        resources:
          limits:
            cpu: 1500m
            memory: 2Gi
          requests:
            cpu: "1"
            memory: 1Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: jenkins-home
        - mountPath: /var/run/docker.sock
          name: docker-sock
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      serviceAccount: jenkins
      serviceAccountName: jenkins
      terminationGracePeriodSeconds: 30
      volumes:
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: jenkins-pvc
      - hostPath:
          path: /var/run/docker.sock
          type: ""
        name: docker-sock
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-05-02T19:28:07Z"
    lastUpdateTime: "2025-05-02T19:28:07Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-05-02T17:57:09Z"
    lastUpdateTime: "2025-05-02T23:38:03Z"
    message: ReplicaSet "jenkins-7fbcb6ff98" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 4
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
